--- a/css/menu.css
+++ b/css/menu.css
@@ -322,7 +322,21 @@ th { font-weight: normal; }
 }
 
 
-/*
-@media only screen and (min-width: 710px){
-}*/
+@media only screen and (min-width: 700px){
+#B{
+	display: show;
+}
+#BB{
+	display: none;
+}
+}
+
+@media only screen and (max-width: 700px){
+#B{
+	display: none;
+}
+#BB{
+	display: show;
+}
+}
 
